text update in about me section 2024

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                               class="icon dark-color theme-after ti-stack-overflow"
                             ></i>
                             <div class="feature-content">
-                              <h5 class="dark-color">ex-Frontend software engineer</h5>
+                              <h5 class="dark-color">Software Engineer</h5>
                               <p>
                                 I've worked in the industry for about eight years as a frontend engineer. Recently, I left my job because I couldn't find any meaning in the work I was doing. I embarked on a journey to discover my true passion and purpose and realized that my passion lies in photography. I now talk about mental health and spirituality.                            </p>
                             </div>
