instagram user name

--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@ src="https://www.facebook.com/tr?id=1010687989704605&ev=PageView&noscript=1"
                           href="https://www.linkedin.com/in/kirandeep-kaur-2aa312106/"
                           >LinkedIn</a
                         > or  <a
-                        href="https://www.instagram.com/kirandeep_kaur93/"
+                        href="https://www.instagram.com/kirandeepkaursraa/"
                         >Instagram</a
                       >
                         for active communications
